--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
                 <button id="viewProjectsBtn" class="header-button">
                     <i class="fas fa-project-diagram"></i> View Projects
                 </button>
-                <a href="path/to/your/cv.pdf" download="Derrick_Machogu_CV.pdf" class="header-button secondary">
+                <a href="https://www.mediafire.com/file/wxrmm10bnqbwxfq/Blue_Light_Financial_Analyst_Simple_Profile_Resume_CV.pdf/file" target="_blank" class="header-button secondary">
                     <i class="fas fa-download"></i> Download CV
                 </a>
             </div>
